# ct

./: .gitignore  ct  ct.go  ct_test.ct  ct_test.go  ctscripts  cttonw  cttoorg  cttoorg.py  foo.ct  go.mod  main.ct  main.go  makefile  notes.txt  org.go  orgct  orgtoct  orgtoct.py  orgtonw.py  pyproject.toml  readme.md  tangle.py  tex.ct  tex.go
.env/: pyvenv.cfg
cmd/ct/: main.ct  main.go
cmd/ctmini/: main.go
conf/: conf.json
ct/: __main__.py  ct.go  ct.py  org.ct  org.go  org.py  tex.ct  tex.go  tex.py
ctmini/: main.go
deb/: makefile
fc/: fc.go  go.mod
internal/fc/: fc.ct
js/: codetext.js
src/ct/: __main__.py  ct.py  tangle.py
trytex/: try.tex  try.toc  tryb.tex  wrap.tex
