[build-system]
requires = ["hatchling"] # list of packages needed to build your package
build-backend = "hatchling.build" # name of the python object that frontends use to perform the build

[project]
name = "ct"
version = "0.0.5"
authors = [
  { name="tnustrings", email="tnustrings@gmail.com"}
]
description = "code with text"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "argparse",  
  "typing_extensions"
]
classifiers = [
  "Programming Language :: Python :: 3"
]

# the scripts are entry points directly callable from the command line after install with pip
[project.scripts]
ct = "ct:__main__"
# orgtoct = "ct:org"

[tool.hatch.build.targets.wheel]
packages = ["ct"]